@@ -2631,10 +2631,11 @@ initValues (void)
    * corresponding to the --std used to start sdcc
    */
   setMainValue ("cppstd",
-    options.std_c11 ? "-std=c11 " :
+    options.std_c2x ? "-std=c2x " :
+    (options.std_c11 ? "-std=c11 " :
     (options.std_c99 ? "-std=c99 " :
     (options.std_c95 ? "-std=iso9899:199409 " :
-    "-std=c89 ")));
+    "-std=c89 "))));
 }
 
 static void
